# pescador

./: .gitignore  .readthedocs.yaml  .travis.yml  .travis_dependencies.sh  AUTHORS.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  learn_ooc.py  pescador.py  setup.cfg  setup.py  tests.py
.github/: environment-ci.yml  environment-lint.yml  environment-minimal.yml
.github/workflows/: ci.yml  lint_python.yml  publish.yml
docs/: Makefile  api.rst  bufferedstreaming.rst  changes.rst  conf.py  example1.rst  example2.rst  example3.rst  examples.rst  index.rst  intro.rst  muxanalysis.rst  requirements.txt  why.rst
examples/: Pescador demo.ipynb  README.txt  keras_example.py  mux_files_example.py  zmq_example.py
examples/frameworks/: README.txt  keras_example.py
examples/mux/: README.txt  chain_example.py  epoch.py  mux_files_example.py  shuffle.py
examples/zmq/: README.txt  zmq_advanced_example.py  zmq_simple_example.py
pescador/: __init__.py  buffered.py  core.py  exceptions.py  maps.py  mp_mux.py  mp_stream.py  mux.py  pescador.py  util.py  version.py  zmq_mux.py  zmq_stream.py
tests/: test_buffered.py  test_buffered_streams.py  test_core.py  test_maps.py  test_mux.py  test_mux_streams.py  test_sklearn.py  test_streamer.py  test_streams.py  test_utils.py  test_zmq_stream.py  test_zmq_streams.py
tests/benchmark/: benchmark_streamers.py
