[tool:pytest]
addopts = --cov-report term-missing --cov pescador

[metadata]
name = pescador
version = attr: pescador.version.version
description = Multiplex generators for incremental learning
author = Pescador developers
author_email = brian.mcfee@nyu.edu
url = https://github.com/pescadores/pescador
download_url = https://github.com/pescadores/pescador/releases
long_description  =  Multiplex generators for incremental learning
license = ISC
python_requires = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*"
classifiers =
    License :: OSI Approved :: ISC License (ISCL)
    Programming Language :: Python
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Multimedia :: Sound/Audio :: Analysis
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
keywords = machine learning
install_requires =
    joblib >= 0.9
    six >= 1.8
    pyzmq >= 15.0
    numpy >= 1.9
    decorator >= 4.0

[options.extras_require]
docs = 
    numpydoc >= 0.6
    sphinx-gallery >= 0.1.10
tests = 
    pytest<=4.0
    pytest-timeout>=1.2
    pytest-cov

