[tool:pytest]
addopts = --cov-report term-missing --cov pescador --cov-report=xml

[pycodestyle]
max-line-length=119
ignore = E203,W503

[pydocstyle]
# convention = numpy
# Below is equivalent to numpy convention + D400 and D205
ignore = D107,D203,D205,D212,D213,D400,D402,D413,D415,D416,D417

[flake8]
count = True
statistics = True
show_source = True
select =
    E9,
    F63,
    F7,
    F82

[metadata]
name = pescador
version = attr: pescador.version.version
description = Multiplex generators for incremental learning
author = Pescador developers
author_email = brian.mcfee@nyu.edu
url = https://github.com/pescadores/pescador
download_url = https://github.com/pescadores/pescador/releases
long_description  =  Multiplex generators for incremental learning
license = ISC
python_requires = ">=3.7"
classifiers =
    License :: OSI Approved :: ISC License (ISCL)
    Programming Language :: Python
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Multimedia :: Sound/Audio :: Analysis
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
keywords = machine learning
install_requires =
    pyzmq >= 18.0
    numpy >= 1.9
    decorator >= 4.0
    msgpack >= 1.0

[options.extras_require]
docs = 
    numpydoc >= 0.6
    sphinx-gallery >= 0.1.10
tests = 
    pytest
    pytest-timeout>=1.2
    pytest-cov
    scipy

